--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
+    "mobx": "^5.15.4",
     "mobx-react": "^6.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
