--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.3",
+    "base64url": "^3.0.1",
     "bootstrap": "^4.4.1",
+    "crypto": "^1.0.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.1",
     "react": "^16.13.1",
